
SVN
- Added german translation (thanks to Friedrich Weber!)
- Cleaned up language code, making adding new languages easier and less error-prone
- Fixed files being overwriten even if user chose "no" in the overwrite dialog (when he didn't choose another path right away)

1.1.1
- Added feature to see other tracks in background of current track (keyboard view only for now)
- Major improvements to ALSA/linux player. Fixed crashes. Made code cleaner.
- Fixed crash on linux when trying to activate port choice dialog
- Cleanup in notation export code, switched from basic text generation to proper printing/pdf export
- Fixed dialog deletion for notation export and custom tuning picker, should fix hangs (and possible crashes) on shutdown
- Imported midi files now properly suggest a file name when e.g. re-saving them
- Added close button to main window (especially useful on linux)
- Fixed yet more bugs with multiple time sig changes
- Fixed importing midi files where events are [incorrectly] not in time order
- Code cleanup in menu code.
- Fixed display errors when scrolling in score

=====================================================================================
Version 1.1 new features highlight
* Fixed countless crashes, bugs and glitches
* Added new score editor
* New undo system that is faster, works in controller editor and allows multiple undos
* Added italian translation
* Major code cleanup and refactoring
* Removed useless stuff from .aria files, making them significantly smaller
* Linux port improved by leaps and bounds, slowly getting more stable
* Major improvements to build system
* Improved document icon
* Added mouse wheels support to vertically scroll tracks
* Made document saving data loss-safe : if a problem occurs while an aria file is being saved, no data loss will occur
======================================================================================

1.1
- Fixed behaviour when closing last document