@@ -118,8 +118,7 @@ NOTE: sorry, this is very raw :)
 * crash when cancelling printing
 * copy-paste from a song to another gives wrong results if the two use different sample sizes
 
-* sometimes when importing song length is all wrong (while you lips)
-* opening manual doesn't work
+* opening manual doesn't always work (?)
 
 + crash in crimson tide blue sea when scrolling in score mode (because of very long low note...)
 + crimson tide blue sea --> find out why score notes don't beam
